crates/hir-ty/tests/snapshots/poly_snapshots__isolation_error.snap
---
source: crates/hir-ty/tests/poly_snapshots.rs
expression: out
---
FILE /src/com/example/Poly.java:
package com.example;

import java.util.function.Function;

class Poly {
    void isolation(boolean flag) {
        Object o = s -> s;
        Object r = String::length;
        Object c = flag ? (s -> s.length()) : (s -> 0);
    }
}

method isolation(boolean): void
  locals: l0: boolean | l1: java.lang.Object | l2: java.lang.Object | l3: java.lang.Object
  exprs: e1: <error> | e3: <error> | e4: boolean | e7: <error> | e8: <error> | e10: <error> | e11: <error> | e12: <error>
