crates/hir-ty/tests/snapshots/poly_snapshots__lambda_return.snap
---
source: crates/hir-ty/tests/poly_snapshots.rs
expression: out
---
FILE /src/com/example/Poly.java:
package com.example;

import java.util.function.Function;

class Poly {
    Function<String, Integer> fun() {
        return s -> s.length();
    }
}

method fun(): java.util.function.Function<java.lang.String, java.lang.Integer>
  locals: 
  exprs: e0: java.lang.String | e1: int | e2: java.util.function.Function<java.lang.String, java.lang.Integer>
