crates/hir-ty/tests/snapshots/poly_snapshots__nested_invocation_target_does_not_rank_overloads.snap
---
source: crates/hir-ty/tests/poly_snapshots.rs
expression: out
---
FILE /src/com/example/S.java:
package com.example;

import java.util.ArrayList;
import java.util.List;
import java.util.function.Consumer;

interface Style {}

interface Sink {
    Sink style(Style s);
    Sink style(Consumer<Object> c);
    Sink append(Style s);
    Sink append(Object o);
}

class S {
    static <T> T fromJson(String s, Class<T> c) {
        return null;
    }

    static final Class<Style> STYLE = Style.class;

    void rankedWithoutTarget(Sink sink) {
        sink.style(fromJson("x", STYLE)).append(null);
    }

    void reallyConsumer(Sink sink, Consumer<Object> c) {
        sink.style(c);
    }

    static <T> T sink2(List<T> l) {
        return null;
    }

    void nestedStillInfers(List<String> source) {
        List<String> copy = new ArrayList<>(source);
        sink2(copy);
    }
}

method fromJson(java.lang.String, java.lang.Class<T>): T
  locals: l0: java.lang.String | l1: java.lang.Class<T>
  exprs: e0: null
field STYLE
  locals: 
  exprs: e1: java.lang.Class<com.example.Style>
method rankedWithoutTarget(com.example.Sink): void
  locals: l2: com.example.Sink
  exprs: e2: null | e3: java.lang.String | e4: java.lang.Class<com.example.Style> | e5: com.example.Style | e6: com.example.Sink | e7: com.example.Sink | e8: com.example.Sink
method reallyConsumer(com.example.Sink, java.util.function.Consumer<java.lang.Object>): void
  locals: l3: com.example.Sink | l4: java.util.function.Consumer<java.lang.Object>
  exprs: e9: java.util.function.Consumer<java.lang.Object> | e10: com.example.Sink | e11: com.example.Sink
method sink2(java.util.List<T>): T
  locals: l5: java.util.List<T>
  exprs: e12: null
method nestedStillInfers(java.util.List<java.lang.String>): void
  locals: l6: java.util.List<java.lang.String> | l7: java.util.List<java.lang.String>
  exprs: e13: java.util.List<java.lang.String> | e14: java.util.ArrayList<java.lang.String> | e15: java.util.List<java.lang.String> | e16: java.lang.String
